--- a/src/app/pages/dashboards/dashboard1/dashboard1.component.html
+++ b/src/app/pages/dashboards/dashboard1/dashboard1.component.html
@@ -22,7 +22,7 @@
   <div class="col-lg-5">
     <app-your-performance></app-your-performance>
   </div>
-  <div class="col-lg-7">
+  <!-- <div class="col-lg-7">
     <div class="row">
       <div class="col-md-6">
         <app-customers-week></app-customers-week>
@@ -31,13 +31,13 @@
         <app-sales-overview></app-sales-overview>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- <div class="col-lg-7">
     <app-basic-table></app-basic-table>
   </div> -->
 
-  <div class="col-lg-7">
+  <div class="col-lg-5">
     <app-footer-row-table></app-footer-row-table>
   </div>
   <div class="col-lg-7">
