--- a/src/app/pages/apps/employee/employee-dialog-content.html
+++ b/src/app/pages/apps/employee/employee-dialog-content.html
@@ -146,7 +146,7 @@
       </div>
     </div>
     <button mat-flat-button (click)="doAction()" mat-flat-button color="primary" [disabled]="!userForm.valid">
-      {{action}}
+      Enregistrer
     </button>
     <button mat-stroked-button color="warn" class="m-l-8" (click)="closeDialog()">
       Retour
@@ -159,7 +159,7 @@
 </div>
 <div mat-dialog-actions class="p-x-24 p-b-24">
   <button mat-button (click)="doAction()" mat-flat-button color="warn">
-    {{action}}
+    Oui
   </button>
   <button mat-button (click)="closeDialog()" class="m-l-8">Cancel</button>
 </div>
