--- a/src/app/pages/apps/employee/employee.component.html
+++ b/src/app/pages/apps/employee/employee.component.html
@@ -25,15 +25,15 @@
   <mat-card-content class="p-24">
 
     <div class="table-responsive">
-      <table mat-table [dataSource]="dataSource" class="w-100">
+      <table mat-table [dataSource]="dataSource" matSort class="w-100">
         <!-- <ng-container matColumnDef="#">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">#</th>
           <td mat-cell *matCellDef="let element">{{ element.id }}</td>
         </ng-container> -->
 
         <ng-container matColumnDef="nom">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Nom</th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef  mat-sort-header  class="f-s-16 f-w-600" >Nom</th>
+          <td mat-cell *matCellDef="let element" data-label="nom">
             <div class="d-flex align-items-center" >
               <img class="rounded-circle" [src]="element.avatar" width="40" />
               <div class="m-l-16" style="width: 200px; flex-direction: column">
@@ -47,26 +47,26 @@
         </ng-container>
 
         <ng-container matColumnDef="statu">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+          <th mat-header-cell *matHeaderCellDef  mat-sort-header class="f-s-16 f-w-600">
            Statut
           </th>
-          <td mat-cell *matCellDef="let element" class="f-s-14">{{ element.statu }}</td>
+          <td mat-cell *matCellDef="let element"  data-label="statu" class="f-s-14">{{ element.statu }}</td>
         </ng-container>
 
         <ng-container matColumnDef="dateInterco">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+          <th mat-header-cell *matHeaderCellDef  mat-sort-header class="f-s-16 f-w-600">
             Date début Interco
           </th>
-          <td mat-cell *matCellDef="let element" class="f-s-14">
+          <td mat-cell *matCellDef="let element" data-label="dateInterco" class="f-s-14">
             {{ element.dateInterco | date:'dd/MM/yyyy' }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="carence">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+          <th mat-header-cell *matHeaderCellDef  mat-sort-header class="f-s-16 f-w-600">
             Carence
           </th>
-          <td mat-cell *matCellDef="let element" class="f-s-14">
+          <td mat-cell *matCellDef="let element" data-label="carence" class="f-s-14">
             {{ element.carence }}
           </td>
         </ng-container>
@@ -80,10 +80,10 @@
         </ng-container> -->
 
         <ng-container matColumnDef="projets">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+          <th mat-header-cell *matHeaderCellDef  mat-sort-header class="f-s-16 f-w-600">
             Projets
           </th>
-          <td mat-cell *matCellDef="let element" class="f-s-14">
+          <td mat-cell *matCellDef="let element" data-label="projets" class="f-s-14">
             {{ element.projets }}
           </td>
         </ng-container>
