--- a/src/app/pages/apps/ticketlist/ticketlist.component.html
+++ b/src/app/pages/apps/ticketlist/ticketlist.component.html
@@ -62,20 +62,20 @@
 <mat-card class="cardWithShadow">
   <mat-card-content>
     <div class="table-responsive" >
-      <table mat-table [dataSource]="dataSource" class="w-100 f-w-500 no-wrap">
+      <table mat-table [dataSource]="dataSource"  matSort class="w-100 f-w-500 no-wrap">
         <ng-container matColumnDef="categorie">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Catégorie</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-s-16 f-w-600">Catégorie</th>
           <td mat-cell *matCellDef="let element">
             {{ element.categorie }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="titre" >
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-s-16 f-w-600">
             Titre
           </th>
           <td mat-cell *matCellDef="let element">
-            <div style="max-width:200px ;display: flex; flex-wrap: wrap;flex-direction: column;">
+            <div style="max-width:190px ;display: flex; flex-wrap: wrap;flex-direction: column;">
               <h6 class="m-0 f-s-16 mat-subtitle-1 f-w-500 m-b-4">{{ element.titre }}</h6>
             <span class="m-0 f-s-14 f-w-400 max-text d-block">{{
               element.details
@@ -85,11 +85,11 @@
         </ng-container>
 
         <ng-container matColumnDef="assignee">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-s-16 f-w-600">
             Assigné à
           </th>
           <td mat-cell *matCellDef="let element">
-            <div class="d-flex align-items-center" style="max-width: 200px;">
+            <div class="d-flex align-items-center" style="max-width: 180px;">
               <img [src]="element.imgSrc" alt="user" width="35" class="rounded-circle m-r-8" />
               <span class="f-w-600 f-s-16 mat-subtitle-1">{{ element.assignee }}</span>
             </div>
@@ -97,7 +97,7 @@
         </ng-container>
 
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+          <th  mat-header-cell *matHeaderCellDef mat-sort-header class="f-s-16 f-w-600">
             Status
           </th>
           <td mat-cell *matCellDef="let element">
@@ -114,6 +114,10 @@
             <span class="bg-light-success text-success mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">Ouvert</span>
             }
 
+            @if(element.statu == 'Pause') {
+              <span class="bg-light-error text-error mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">En pause</span>
+              }
+
             @if(element.statu == 'Cloture') {
             <span class="bg-light-error text-error mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">Clôturé</span>
             }
@@ -121,11 +125,11 @@
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="nbJour">
+        <ng-container matColumnDef="nbJour" >
 
 
           <!-- nbJours -->
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-s-16 f-w-600">
             Nb Jours
           </th>
           <td mat-cell *matCellDef="let element">
@@ -150,21 +154,21 @@
         </ng-container>
 
         <ng-container matColumnDef="progression">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Progression</th>
+          <th  mat-header-cell *matHeaderCellDef mat-sort-header class="f-s-16 f-w-600">Progression</th>
           <td mat-cell *matCellDef="let element" class="f-s-14">
             {{ element.progression }}  %
           </td>
         </ng-container>
 
         <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Date</th>
+          <th mat-header-cell style="max-width: 100px;" *matHeaderCellDef mat-sort-header class="f-s-16 f-w-600">Date</th>
           <td mat-cell *matCellDef="let element" class="f-s-14">
             {{ element.dateDebut | date:'dd/MM/yyyy' }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+          <th mat-header-cell *matHeaderCellDef  class="f-s-16 f-w-600">
             Action
           </th>
           <td mat-cell *matCellDef="let element" class="action-link">
