--- a/src/app/pages/tables/footer-row-table/footer-row-table.component.html
+++ b/src/app/pages/tables/footer-row-table/footer-row-table.component.html
@@ -1,7 +1,7 @@
 <mat-card class="cardWithShadow">
   <mat-card-content>
     <mat-card-title>Catégorie des actions réalisées</mat-card-title>
-    <mat-card-subtitle class="mat-body-1">total disponible en bas du tableau</mat-card-subtitle>
+    <mat-card-subtitle class="mat-body-1">total par action</mat-card-subtitle>
     <div class="table-responsive">
       <table mat-table [dataSource]="transactions" class="w-100">
         <!-- Item Column -->
@@ -11,7 +11,7 @@
             *matHeaderCellDef
             class="f-w-600 mat-subtitle-1 f-s-16 p-l-0"
           >
-            Actions
+            Action
           </th>
           <td mat-cell *matCellDef="let transaction" class="p-l-0">
             <div class="d-flex align-items-center gap-12">
@@ -21,8 +21,12 @@
                 width="45"
                 class="rounded"
               /> -->
-
+              <span
+              class="iconify f-s-24 text-{{ transaction.color }}"
+              [attr.data-icon]="transaction.img"
+            ></span>
               <span class="f-s-16 f-w-600">{{ transaction.item }} </span>
+
             </div>
           </td>
           <td mat-footer-cell *matFooterCellDef class="p-l-0 f-w-600">Total</td>
@@ -40,10 +44,39 @@
           <td mat-cell *matCellDef="let transaction">
             {{ transaction.cost  }}
           </td>
-          <td mat-footer-cell *matFooterCellDef>
+          <td mat-footer-cell *matFooterCellDef style="font-weight: bold;">
             {{ getTotalCost() }}
           </td>
         </ng-container>
+
+        <ng-container matColumnDef="average">
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            class="f-w-600 mat-subtitle-1 f-s-16"
+          >
+            Temps moyen de traitement
+          </th>
+          <td mat-cell *matCellDef="let transaction" style="display: flex;justify-content: center;">
+            @if(transaction.moyenne >20 && transaction.moyenne <=60) {
+              <span class="bg-light-warning text-warning mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">{{transaction.moyenne}} Jour(s)</span>
+              }
+
+              @if(transaction.moyenne <20) {
+              <span class="bg-light-success text-success mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">{{transaction.moyenne}} Jour(s)</span>
+              }
+
+              @if(transaction.moyenne > 60) {
+              <span class="bg-light-error text-error mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">{{transaction.moyenne}} Jour(s)</span>
+              }
+
+          </td>
+          <td mat-footer-cell *matFooterCellDef>
+            <!-- {{ getTotalCost() }} -->
+          </td>
+        </ng-container>
+
+
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
